syntax = "proto3";

package juno.file_service.file;

import "identifiers.proto";

service FileDbService {
  rpc getFile(GetFileRequest) returns (File);
  rpc createFile(CreateFileRequest) returns (File);
  rpc deleteFile(DeleteFileRequest) returns (File);
  rpc updateFile(UpdateFileRequest) returns (File);
}

service FileService {
  rpc uploadFile(UploadFileRequest) returns (UploadFileResponse);
  rpc downloadFile(DownloadFileRequest) returns (DownloadFileResponse);
}

message File {
  identifiers.FileIdentifier fileId = 1;
  string metadata = 4;
}

message GetFileRequest { identifiers.FileIdentifier fileId = 1; }

message CreateFileRequest {
  identifiers.FileIdentifier fileId = 1;
  string metadata = 4;
}

message UpdateFileRequest {
  identifiers.FileIdentifier fileId = 1;
  string metadata = 4;
}

message DeleteFileRequest { identifiers.FileIdentifier fileId = 1; }

message UploadFileRequest {
  string fileName = 1;
  string bucketName = 2;
  string providerName = 3;
  int32 configId = 4;
  string configEnv = 6;
  optional string region = 5;
}

message UploadFileResponse { string url = 1; }

message DownloadFileRequest {
  string fileName = 1;
  string bucketName = 2;
  string providerName = 3;
  int32 configId = 4;
  string configEnv = 6;
  optional string region = 5;
}

message DownloadFileResponse { string url = 1; }
