syntax = "proto3";

package juno.file_service.provider;

import "identifiers.proto";

import "file_bucket.proto";

service FileProviderDbService {
  rpc getProvider(GetFileProviderRequest) returns (FileProvider);
  rpc createProvider(CreateFileProviderRequest) returns (FileProvider);
  rpc deleteProvider(DeleteFileProviderRequest) returns (FileProvider);
  rpc updateProvider(UpdateFileProviderRequest) returns (FileProvider);
}

service FileProviderFileService {
  rpc registerProvider(RegisterProviderRequest) returns (FileProvider);
  rpc removeProvider(RegisterProviderRequest) returns (FileProvider);
}

enum ProviderType {
  S3 = 0;
  AZURE = 1;
}

message FileProvider {
  string provider_name = 1;
  string access_key = 2;
  string metadata = 3;
  repeated bucket.Bucket bucket = 4;
  ProviderType provider_type = 5; 
}

message GetFileProviderRequest { string provider_name = 1; }

message CreateFileProviderRequest {
  string provider_name = 1;
  string access_key = 2;
  string metadata = 3;
  repeated bucket.Bucket bucket = 4;
}

message UpdateFileProviderRequest {
  string provider_name = 1;
  optional string access_key = 2;
  optional string metadata = 3;
  repeated bucket.Bucket bucket = 4;
}

message DeleteFileProviderRequest { string provider_name = 1; }

message RegisterProviderRequest {
  string provider_name = 1;
  string public_access_key = 2;
  string private_access_key = 3;
  string baseUrl = 4;
}

message RemoveProviderRequest {
  string provider_name = 1;
}
